kubernetes/apps/monitoring-system/coroot/app/httproute.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: coroot-dashboard
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: coroot.png
    gethomepage.dev/name: Coroot
    gethomepage.dev/group: Observability
spec:
  hostnames: ["coroot.noirprime.com"]
  parentRefs:
    - name: internal
      namespace: networking-system
      sectionName: https
  rules:
    - backendRefs:
        - name: coroot-coroot
          port: 8080
